src/components/Languages/Languages.module.css
.section {
  grid-row-start: 2;
  grid-column: 3 / 5;
  padding: 1.5rem;
  border-radius: 2.5rem;
  background-color: var(--bg-color-transparent);
  box-shadow:
    inset -0.3rem -0.3rem 0.2rem 0 var(--dark-shadow),
    0.4rem 0.4rem 1rem 0.1rem var(--dark-shadow),
    inset 0.4rem 0.4rem 1rem 0.1rem var(--light-shadow);
  transition: 0.2s;
}

.list {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
}

.item {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.icon {
  width: 4rem;
  height: 4rem;
  filter: drop-shadow(0.4rem 0.4rem 0.8rem var(--dark-shadow));
}

.info_wrapper {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 1rem;
}

.small_icon {
  width: 3rem;
  height: auto;
  filter: drop-shadow(0.4rem 0.4rem 0.8rem var(--dark-shadow));
  transition: 0.2s;
}

@media (hover: hover) {
  .section:hover {
    transform: scale(1.005) translateY(-1%);
    box-shadow:
      inset -0.3rem -0.3rem 0.2rem 0 var(--dark-shadow),
      0.6rem 0.6rem 1.2rem 0.1rem var(--dark-shadow),
      inset 0.4rem 0.4rem 1rem 0.1rem var(--light-shadow);
  }

  .small_icon:hover {
    transform: scale(1.1);
  }
}

@media screen and (max-width: 850px) {
  .section {
    width: 100%;
  }
}

@media screen and (max-width: 450px) {
  .icon {
    width: 3rem;
    height: 3rem;
  }
}

